// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Urls should gets Urls for documents multi modules: outputFileStrategy: members 1`] = `
[
  "ModuleWithDocuments1/README.md",
  "ModuleWithDocuments1/classes/ClassWithDocuments.md",
  "ModuleWithDocuments1/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments1/documents/MODULE_DOC.md",
  "ModuleWithDocuments1/enumerations/EnumWithDocuments.md",
  "ModuleWithDocuments1/enumerations/documents/ENUM_DOC.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_1.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_2.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_3.md",
  "ModuleWithDocuments1/functions/functionWithDocuments.md",
  "ModuleWithDocuments1/functions/multipleFunctionWithDocuments.md",
  "ModuleWithDocuments1/interfaces/InterfaceWithDocuments.md",
  "ModuleWithDocuments1/interfaces/documents/INTERFACE_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/README.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/classes/NamespaceClassWithDocuments.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/NAMESPACE_DOC.md",
  "ModuleWithDocuments1/type-aliases/TypeWithDocuments.md",
  "ModuleWithDocuments1/type-aliases/documents/TYPE_DOC.md",
  "ModuleWithDocuments1/variables/documents/VARIABLE_DOC.md",
  "ModuleWithDocuments1/variables/variableWithDocuments.md",
  "ModuleWithDocuments2/README.md",
  "ModuleWithDocuments2/classes/ClassWithDocuments.md",
  "ModuleWithDocuments2/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments2/documents/MODULE_DOC.md",
  "ModuleWithDocuments2/enumerations/EnumWithDocuments.md",
  "ModuleWithDocuments2/enumerations/documents/ENUM_DOC.md",
  "ModuleWithDocuments2/functions/documents/FUNCTION_DOC_1.md",
  "ModuleWithDocuments2/functions/documents/FUNCTION_DOC_2.md",
  "ModuleWithDocuments2/functions/documents/FUNCTION_DOC_3.md",
  "ModuleWithDocuments2/functions/functionWithDocuments.md",
  "ModuleWithDocuments2/functions/multipleFunctionWithDocuments.md",
  "ModuleWithDocuments2/interfaces/InterfaceWithDocuments.md",
  "ModuleWithDocuments2/interfaces/documents/INTERFACE_DOC.md",
  "ModuleWithDocuments2/type-aliases/TypeWithDocuments.md",
  "ModuleWithDocuments2/type-aliases/documents/TYPE_DOC.md",
  "ModuleWithDocuments2/variables/documents/VARIABLE_DOC.md",
  "ModuleWithDocuments2/variables/variableWithDocuments.md",
  "README.md",
  "documents/Project-Document-1.md",
  "documents/docs/project/PROJECT_DOC_2.md",
  "documents/docs/project/PROJECT_DOC_3.md",
]
`;

exports[`Urls should gets Urls for documents multi modules: outputFileStrategy: members 2`] = `
[
  "Document.Project-Document-1.md",
  "Document.docs.project.PROJECT_DOC_2.md",
  "Document.docs.project.PROJECT_DOC_3.md",
  "ModuleWithDocuments1.Class.ClassWithDocuments.md",
  "ModuleWithDocuments1.ClassWithDocuments.Document.CLASS_DOC.md",
  "ModuleWithDocuments1.Document.MODULE_DOC.md",
  "ModuleWithDocuments1.EnumWithDocuments.Document.ENUM_DOC.md",
  "ModuleWithDocuments1.Enumeration.EnumWithDocuments.md",
  "ModuleWithDocuments1.Function.functionWithDocuments.md",
  "ModuleWithDocuments1.Function.multipleFunctionWithDocuments.md",
  "ModuleWithDocuments1.Interface.InterfaceWithDocuments.md",
  "ModuleWithDocuments1.InterfaceWithDocuments.Document.INTERFACE_DOC.md",
  "ModuleWithDocuments1.Namespace.NamespaceWithDocuments.md",
  "ModuleWithDocuments1.NamespaceWithDocuments.Class.NamespaceClassWithDocuments.md",
  "ModuleWithDocuments1.NamespaceWithDocuments.Document.NAMESPACE_DOC.md",
  "ModuleWithDocuments1.NamespaceWithDocuments.NamespaceClassWithDocuments.Document.CLASS_DOC.md",
  "ModuleWithDocuments1.TypeAlias.TypeWithDocuments.md",
  "ModuleWithDocuments1.TypeWithDocuments.Document.TYPE_DOC.md",
  "ModuleWithDocuments1.Variable.variableWithDocuments.md",
  "ModuleWithDocuments1.functionWithDocuments.Document.FUNCTION_DOC_1.md",
  "ModuleWithDocuments1.md",
  "ModuleWithDocuments1.multipleFunctionWithDocuments.Document.FUNCTION_DOC_1.md",
  "ModuleWithDocuments1.multipleFunctionWithDocuments.Document.FUNCTION_DOC_2.md",
  "ModuleWithDocuments1.multipleFunctionWithDocuments.Document.FUNCTION_DOC_3.md",
  "ModuleWithDocuments1.variableWithDocuments.Document.VARIABLE_DOC.md",
  "ModuleWithDocuments2.Class.ClassWithDocuments.md",
  "ModuleWithDocuments2.ClassWithDocuments.Document.CLASS_DOC.md",
  "ModuleWithDocuments2.Document.MODULE_DOC.md",
  "ModuleWithDocuments2.EnumWithDocuments.Document.ENUM_DOC.md",
  "ModuleWithDocuments2.Enumeration.EnumWithDocuments.md",
  "ModuleWithDocuments2.Function.functionWithDocuments.md",
  "ModuleWithDocuments2.Function.multipleFunctionWithDocuments.md",
  "ModuleWithDocuments2.Interface.InterfaceWithDocuments.md",
  "ModuleWithDocuments2.InterfaceWithDocuments.Document.INTERFACE_DOC.md",
  "ModuleWithDocuments2.TypeAlias.TypeWithDocuments.md",
  "ModuleWithDocuments2.TypeWithDocuments.Document.TYPE_DOC.md",
  "ModuleWithDocuments2.Variable.variableWithDocuments.md",
  "ModuleWithDocuments2.functionWithDocuments.Document.FUNCTION_DOC_1.md",
  "ModuleWithDocuments2.md",
  "ModuleWithDocuments2.multipleFunctionWithDocuments.Document.FUNCTION_DOC_1.md",
  "ModuleWithDocuments2.multipleFunctionWithDocuments.Document.FUNCTION_DOC_2.md",
  "ModuleWithDocuments2.multipleFunctionWithDocuments.Document.FUNCTION_DOC_3.md",
  "ModuleWithDocuments2.variableWithDocuments.Document.VARIABLE_DOC.md",
  "README.md",
]
`;

exports[`Urls should gets Urls for documents multi modules: outputFileStrategy: modules 1`] = `
[
  "ModuleWithDocuments1/README.md",
  "ModuleWithDocuments1/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments1/documents/Enumeration.ENUM_DOC.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_1.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_2.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_3.md",
  "ModuleWithDocuments1/documents/Interface.INTERFACE_DOC.md",
  "ModuleWithDocuments1/documents/MODULE_DOC.md",
  "ModuleWithDocuments1/documents/TypeAlias.TYPE_DOC.md",
  "ModuleWithDocuments1/documents/Variable.VARIABLE_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/README.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/NAMESPACE_DOC.md",
  "ModuleWithDocuments2/README.md",
  "ModuleWithDocuments2/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments2/documents/Enumeration.ENUM_DOC.md",
  "ModuleWithDocuments2/documents/Function.FUNCTION_DOC_1.md",
  "ModuleWithDocuments2/documents/Function.FUNCTION_DOC_2.md",
  "ModuleWithDocuments2/documents/Function.FUNCTION_DOC_3.md",
  "ModuleWithDocuments2/documents/Interface.INTERFACE_DOC.md",
  "ModuleWithDocuments2/documents/MODULE_DOC.md",
  "ModuleWithDocuments2/documents/TypeAlias.TYPE_DOC.md",
  "ModuleWithDocuments2/documents/Variable.VARIABLE_DOC.md",
  "README.md",
  "documents/Project-Document-1.md",
  "documents/docs/project/PROJECT_DOC_2.md",
  "documents/docs/project/PROJECT_DOC_3.md",
]
`;

exports[`Urls should gets Urls for documents multi modules: outputFileStrategy: modules 2`] = `
[
  "Document.Class.CLASS_DOC.md",
  "Document.Enumeration.ENUM_DOC.md",
  "Document.Function.FUNCTION_DOC_1.md",
  "Document.Function.FUNCTION_DOC_2.md",
  "Document.Function.FUNCTION_DOC_3.md",
  "Document.Interface.INTERFACE_DOC.md",
  "Document.Project-Document-1.md",
  "Document.TypeAlias.TYPE_DOC.md",
  "Document.Variable.VARIABLE_DOC.md",
  "Document.docs.project.PROJECT_DOC_2.md",
  "Document.docs.project.PROJECT_DOC_3.md",
  "ModuleWithDocuments1.Document.MODULE_DOC.md",
  "ModuleWithDocuments1.Namespace.NamespaceWithDocuments.md",
  "ModuleWithDocuments1.NamespaceWithDocuments.Document.NAMESPACE_DOC.md",
  "ModuleWithDocuments1.md",
  "ModuleWithDocuments2.Document.MODULE_DOC.md",
  "ModuleWithDocuments2.md",
  "README.md",
]
`;

exports[`Urls should gets Urls for documents single module: outputFileStrategy: members 1`] = `
[
  "ModuleWithDocuments1/README.md",
  "ModuleWithDocuments1/classes/ClassWithDocuments.md",
  "ModuleWithDocuments1/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments1/documents/MODULE_DOC.md",
  "ModuleWithDocuments1/enumerations/EnumWithDocuments.md",
  "ModuleWithDocuments1/enumerations/documents/ENUM_DOC.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_1.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_2.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_3.md",
  "ModuleWithDocuments1/functions/functionWithDocuments.md",
  "ModuleWithDocuments1/functions/multipleFunctionWithDocuments.md",
  "ModuleWithDocuments1/interfaces/InterfaceWithDocuments.md",
  "ModuleWithDocuments1/interfaces/documents/INTERFACE_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/README.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/classes/NamespaceClassWithDocuments.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/NAMESPACE_DOC.md",
  "ModuleWithDocuments1/type-aliases/TypeWithDocuments.md",
  "ModuleWithDocuments1/type-aliases/documents/TYPE_DOC.md",
  "ModuleWithDocuments1/variables/documents/VARIABLE_DOC.md",
  "ModuleWithDocuments1/variables/variableWithDocuments.md",
  "README.md",
  "documents/Project-Document-1.md",
  "documents/docs/project/PROJECT_DOC_2.md",
  "documents/docs/project/PROJECT_DOC_3.md",
]
`;

exports[`Urls should gets Urls for documents single module: outputFileStrategy: members 2`] = `
[
  "ModuleWithDocuments1/README.md",
  "ModuleWithDocuments1/classes/ClassWithDocuments.md",
  "ModuleWithDocuments1/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments1/documents/MODULE_DOC.md",
  "ModuleWithDocuments1/enumerations/EnumWithDocuments.md",
  "ModuleWithDocuments1/enumerations/documents/ENUM_DOC.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_1.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_2.md",
  "ModuleWithDocuments1/functions/documents/FUNCTION_DOC_3.md",
  "ModuleWithDocuments1/functions/functionWithDocuments.md",
  "ModuleWithDocuments1/functions/multipleFunctionWithDocuments.md",
  "ModuleWithDocuments1/interfaces/InterfaceWithDocuments.md",
  "ModuleWithDocuments1/interfaces/documents/INTERFACE_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/README.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/classes/NamespaceClassWithDocuments.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/classes/documents/CLASS_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/NAMESPACE_DOC.md",
  "ModuleWithDocuments1/type-aliases/TypeWithDocuments.md",
  "ModuleWithDocuments1/type-aliases/documents/TYPE_DOC.md",
  "ModuleWithDocuments1/variables/documents/VARIABLE_DOC.md",
  "ModuleWithDocuments1/variables/variableWithDocuments.md",
  "README.md",
  "documents/Project-Document-1.md",
  "documents/docs/project/PROJECT_DOC_2.md",
  "documents/docs/project/PROJECT_DOC_3.md",
]
`;

exports[`Urls should gets Urls for documents single module: outputFileStrategy: modules 1`] = `
[
  "ModuleWithDocuments1/README.md",
  "ModuleWithDocuments1/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments1/documents/Enumeration.ENUM_DOC.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_1.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_2.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_3.md",
  "ModuleWithDocuments1/documents/Interface.INTERFACE_DOC.md",
  "ModuleWithDocuments1/documents/MODULE_DOC.md",
  "ModuleWithDocuments1/documents/TypeAlias.TYPE_DOC.md",
  "ModuleWithDocuments1/documents/Variable.VARIABLE_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/README.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/NAMESPACE_DOC.md",
  "README.md",
  "documents/Project-Document-1.md",
  "documents/docs/project/PROJECT_DOC_2.md",
  "documents/docs/project/PROJECT_DOC_3.md",
]
`;

exports[`Urls should gets Urls for documents single module: outputFileStrategy: modules 2`] = `
[
  "ModuleWithDocuments1/README.md",
  "ModuleWithDocuments1/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments1/documents/Enumeration.ENUM_DOC.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_1.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_2.md",
  "ModuleWithDocuments1/documents/Function.FUNCTION_DOC_3.md",
  "ModuleWithDocuments1/documents/Interface.INTERFACE_DOC.md",
  "ModuleWithDocuments1/documents/MODULE_DOC.md",
  "ModuleWithDocuments1/documents/TypeAlias.TYPE_DOC.md",
  "ModuleWithDocuments1/documents/Variable.VARIABLE_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/README.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/Class.CLASS_DOC.md",
  "ModuleWithDocuments1/namespaces/NamespaceWithDocuments/documents/NAMESPACE_DOC.md",
  "README.md",
  "documents/Project-Document-1.md",
  "documents/docs/project/PROJECT_DOC_2.md",
  "documents/docs/project/PROJECT_DOC_3.md",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: members 1`] = `
[
  "@scope/module-1/README.mdx",
  "@scope/module-1/classes/ModuleClass.mdx",
  "README.mdx",
  "entry-module/classes/ModuleClass.mdx",
  "module-2/README.mdx",
  "module-2/classes/ModuleClass.mdx",
  "readme_.mdx",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: members 2`] = `
[
  "entry-module/classes/ModuleClass.mdx",
  "index.mdx",
  "module-1/classes/ModuleClass.mdx",
  "module-1/index.mdx",
  "module-2/classes/ModuleClass.mdx",
  "module-2/index.mdx",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: modules 1`] = `
[
  "@scope/module-1.mdx",
  "README.mdx",
  "module-2.mdx",
  "readme_.mdx",
]
`;

exports[`Urls should gets Urls for entry module: outputFileStrategy: modules 2`] = `
[
  "index.mdx",
  "module-1.mdx",
  "module-2.mdx",
]
`;

exports[`Urls should gets Urls for modules parts: outputFileStrategy: members 1`] = `
[
  "README.md",
  "Test_Module_Name/README.md",
  "Test_Module_Name/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-1/README.md",
  "module-1/submodules/submodule-1/classes/ClassA.md",
  "module-1/submodules/submodule-1/classes/ClassB.md",
  "module-1/submodules/submodule-1/enumerations/EnumA.md",
  "module-1/submodules/submodule-1/enumerations/EnumB.md",
  "module-1/submodules/submodule-1/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-1/interfaces/InterfaceB.md",
  "module-1/submodules/submodule-1/type-aliases/TypeA.md",
  "module-1/submodules/submodule-1/type-aliases/TypeB.md",
  "module-1/submodules/submodule-2/README.md",
  "module-1/submodules/submodule-2/classes/ClassA.md",
  "module-1/submodules/submodule-2/classes/ClassB.md",
  "module-1/submodules/submodule-2/enumerations/EnumA.md",
  "module-1/submodules/submodule-2/enumerations/EnumB.md",
  "module-1/submodules/submodule-2/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-2/interfaces/InterfaceB.md",
  "module-1/submodules/submodule-2/type-aliases/TypeA.md",
  "module-1/submodules/submodule-2/type-aliases/TypeB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/README.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/enumerations/EnumA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/enumerations/EnumB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/interfaces/InterfaceB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/type-aliases/TypeA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1/type-aliases/TypeB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/README.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/enumerations/EnumA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/enumerations/EnumB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/interfaces/InterfaceA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/interfaces/InterfaceB.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/type-aliases/TypeA.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2/type-aliases/TypeB.md",
  "module-2/README.md",
  "module-2/classes/ClassA.md",
  "module-2/classes/ClassB.md",
  "module-2/enumerations/EnumA.md",
  "module-2/enumerations/EnumB.md",
  "module-2/interfaces/InterfaceA.md",
  "module-2/interfaces/InterfaceB.md",
  "module-2/type-aliases/TypeA.md",
  "module-2/type-aliases/TypeB.md",
  "namespace/README.md",
  "namespace/classes/ClassA.md",
  "namespace/classes/ClassB.md",
  "namespace/enumerations/EnumA.md",
  "namespace/enumerations/EnumB.md",
  "namespace/interfaces/InterfaceA.md",
  "namespace/interfaces/InterfaceB.md",
  "namespace/type-aliases/TypeA.md",
  "namespace/type-aliases/TypeB.md",
]
`;

exports[`Urls should gets Urls for modules parts: outputFileStrategy: members 2`] = `
[
  "@scope.namespace.Class.ClassA.md",
  "@scope.namespace.Class.ClassB.md",
  "@scope.namespace.Enumeration.EnumA.md",
  "@scope.namespace.Enumeration.EnumB.md",
  "@scope.namespace.Interface.InterfaceA.md",
  "@scope.namespace.Interface.InterfaceB.md",
  "@scope.namespace.TypeAlias.TypeA.md",
  "@scope.namespace.TypeAlias.TypeB.md",
  "@scope.namespace.md",
  "README.md",
  "Test.Module.Name.Interface.InterfaceA.md",
  "Test.Module.Name.md",
  "module-1.submodules.submodule-1.Class.ClassA.md",
  "module-1.submodules.submodule-1.Class.ClassB.md",
  "module-1.submodules.submodule-1.Enumeration.EnumA.md",
  "module-1.submodules.submodule-1.Enumeration.EnumB.md",
  "module-1.submodules.submodule-1.Interface.InterfaceA.md",
  "module-1.submodules.submodule-1.Interface.InterfaceB.md",
  "module-1.submodules.submodule-1.TypeAlias.TypeA.md",
  "module-1.submodules.submodule-1.TypeAlias.TypeB.md",
  "module-1.submodules.submodule-1.md",
  "module-1.submodules.submodule-2.Class.ClassA.md",
  "module-1.submodules.submodule-2.Class.ClassB.md",
  "module-1.submodules.submodule-2.Enumeration.EnumA.md",
  "module-1.submodules.submodule-2.Enumeration.EnumB.md",
  "module-1.submodules.submodule-2.Interface.InterfaceA.md",
  "module-1.submodules.submodule-2.Interface.InterfaceB.md",
  "module-1.submodules.submodule-2.TypeAlias.TypeA.md",
  "module-1.submodules.submodule-2.TypeAlias.TypeB.md",
  "module-1.submodules.submodule-2.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Class.ClassA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Class.ClassB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Enumeration.EnumA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Enumeration.EnumB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Interface.InterfaceA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.Interface.InterfaceB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.TypeAlias.TypeA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.TypeAlias.TypeB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Class.ClassA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Class.ClassB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Enumeration.EnumA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Enumeration.EnumB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Interface.InterfaceA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.Interface.InterfaceB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.TypeAlias.TypeA.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.TypeAlias.TypeB.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.md",
  "module-2.Class.ClassA.md",
  "module-2.Class.ClassB.md",
  "module-2.Enumeration.EnumA.md",
  "module-2.Enumeration.EnumB.md",
  "module-2.Interface.InterfaceA.md",
  "module-2.Interface.InterfaceB.md",
  "module-2.TypeAlias.TypeA.md",
  "module-2.TypeAlias.TypeB.md",
  "module-2.md",
]
`;

exports[`Urls should gets Urls for modules parts: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "Test_Module_Name.md",
  "module-1/submodules/submodule-1.md",
  "module-1/submodules/submodule-2.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-1.md",
  "module-1/submodules/submodule-3-with-modules/nested-submodule-2.md",
  "module-2.md",
  "namespace.md",
]
`;

exports[`Urls should gets Urls for modules parts: outputFileStrategy: modules 2`] = `
[
  "@scope.namespace.md",
  "README.md",
  "Test.Module.Name.md",
  "module-1.submodules.submodule-1.md",
  "module-1.submodules.submodule-2.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-1.md",
  "module-1.submodules.submodule-3-with-modules.nested-submodule-2.md",
  "module-2.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: members 1`] = `
[
  "-internal-/index.md",
  "42-module-name/index.md",
  "basic/classes/ClassA.md",
  "basic/classes/ClassB.md",
  "basic/enumerations/EnumA.md",
  "basic/enumerations/EnumB.md",
  "basic/functions/functionA.md",
  "basic/index.md",
  "basic/interfaces/InterfaceA.md",
  "basic/interfaces/InterfaceB.md",
  "basic/type-aliases/TypeA.md",
  "basic/type-aliases/TypeB.md",
  "basic/variables/variableA.md",
  "basic/variables/variableB.md",
  "has-categories/enumerations/CategoryAEnum1.md",
  "has-categories/enumerations/CategoryAEnum2.md",
  "has-categories/enumerations/CategoryBEnum1.md",
  "has-categories/enumerations/CategoryBEnum2.md",
  "has-categories/enumerations/UnCategorizedEnum.md",
  "has-categories/index.md",
  "has-categories/interfaces/CategoryAInterface1.md",
  "has-categories/interfaces/CategoryAInterface2.md",
  "has-categories/interfaces/CategoryBInterface1.md",
  "has-categories/interfaces/CategoryBInterface2.md",
  "has-categories/interfaces/UnCategorizedInterace.md",
  "has-custom-groups/index.md",
  "has-custom-groups/variables/variabelA.md",
  "has-custom-groups/variables/variableB1.md",
  "has-custom-groups/variables/variableB2.md",
  "has-custom-groups/variables/variableC.md",
  "has-namespaces/classes/ClassB.md",
  "has-namespaces/classes/Class_A.md",
  "has-namespaces/enumerations/EnumB.md",
  "has-namespaces/enumerations/Enum_A.md",
  "has-namespaces/functions/functionB.md",
  "has-namespaces/functions/function_A.md",
  "has-namespaces/index.md",
  "has-namespaces/interfaces/InterfaceB.md",
  "has-namespaces/interfaces/Interface_A.md",
  "has-namespaces/namespaces/NamespaceB/index.md",
  "has-namespaces/namespaces/Namespace_A/index.md",
  "has-namespaces/namespaces/Namespace_A/interfaces/NamespaceInterface.md",
  "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/index.md",
  "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/interfaces/NamespaceInterface.md",
  "has-namespaces/type-aliases/TypeB.md",
  "has-namespaces/type-aliases/Type_A.md",
  "has-namespaces/variables/variableB.md",
  "has-namespaces/variables/variable_A.md",
  "has-references/functions/defaultFunction.md",
  "has-references/index.md",
  "has-same-exports/classes/SomeClass.md",
  "has-same-exports/classes/someClass-1.md",
  "has-same-exports/functions/someFunction.md",
  "has-same-exports/index.md",
  "index/classes/SomeClass.md",
  "index/index.md",
  "index.md",
  "modules.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: members 2`] = `
[
  "-internal-/index.md",
  "42-module-name/index.md",
  "basic/classes/ClassA.md",
  "basic/classes/ClassB.md",
  "basic/enumerations/EnumA.md",
  "basic/enumerations/EnumB.md",
  "basic/functions/functionA.md",
  "basic/index.md",
  "basic/interfaces/InterfaceA.md",
  "basic/interfaces/InterfaceB.md",
  "basic/type-aliases/TypeA.md",
  "basic/type-aliases/TypeB.md",
  "has-categories/enumerations/CategoryAEnum1.md",
  "has-categories/enumerations/CategoryAEnum2.md",
  "has-categories/enumerations/CategoryBEnum1.md",
  "has-categories/enumerations/CategoryBEnum2.md",
  "has-categories/enumerations/UnCategorizedEnum.md",
  "has-categories/index.md",
  "has-categories/interfaces/CategoryAInterface1.md",
  "has-categories/interfaces/CategoryAInterface2.md",
  "has-categories/interfaces/CategoryBInterface1.md",
  "has-categories/interfaces/CategoryBInterface2.md",
  "has-categories/interfaces/UnCategorizedInterace.md",
  "has-custom-groups/index.md",
  "has-namespaces/classes/ClassB.md",
  "has-namespaces/classes/Class_A.md",
  "has-namespaces/enumerations/EnumB.md",
  "has-namespaces/enumerations/Enum_A.md",
  "has-namespaces/functions/functionB.md",
  "has-namespaces/functions/function_A.md",
  "has-namespaces/index.md",
  "has-namespaces/interfaces/InterfaceB.md",
  "has-namespaces/interfaces/Interface_A.md",
  "has-namespaces/namespaces/NamespaceB/index.md",
  "has-namespaces/namespaces/Namespace_A/index.md",
  "has-namespaces/namespaces/Namespace_A/interfaces/NamespaceInterface.md",
  "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/index.md",
  "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace/interfaces/NamespaceInterface.md",
  "has-namespaces/type-aliases/TypeB.md",
  "has-namespaces/type-aliases/Type_A.md",
  "has-references/functions/defaultFunction.md",
  "has-references/index.md",
  "has-same-exports/classes/SomeClass.md",
  "has-same-exports/classes/someClass-1.md",
  "has-same-exports/functions/someFunction.md",
  "has-same-exports/index.md",
  "index/classes/SomeClass.md",
  "index/index.md",
  "index.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: modules 1`] = `
[
  "-internal-.md",
  "42-module-name.md",
  "basic.md",
  "has-categories.md",
  "has-custom-groups.md",
  "has-namespaces/index.md",
  "has-namespaces/namespaces/NamespaceB.md",
  "has-namespaces/namespaces/Namespace_A/index.md",
  "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace.md",
  "has-references.md",
  "has-same-exports.md",
  "index.md",
  "module_index.md",
  "modules.md",
]
`;

exports[`Urls should gets Urls for multiple entry points: outputFileStrategy: modules 2`] = `
[
  "-internal-.md",
  "42-module-name.md",
  "basic.md",
  "has-categories.md",
  "has-custom-groups.md",
  "has-namespaces/index.md",
  "has-namespaces/namespaces/NamespaceB.md",
  "has-namespaces/namespaces/Namespace_A/index.md",
  "has-namespaces/namespaces/Namespace_A/namespaces/NestedNamespace.md",
  "has-references.md",
  "has-same-exports.md",
  "index.md",
  "module_index.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: members 1`] = `
[
  "@scope/package-1/globals.md",
  "@scope/package-1/index.md",
  "@scope/package-1/interfaces/PackageInterface.md",
  "@scope/package-3/documents/Package-Document-1.md",
  "@scope/package-3/index/index.md",
  "@scope/package-3/index/interfaces/PackageInterfaceForIndexModule.md",
  "@scope/package-3/index.md",
  "@scope/package-3/module-1/index.md",
  "@scope/package-3/module-1/interfaces/PackageInterface1.md",
  "@scope/package-3/module-2/index.md",
  "@scope/package-3/module-2/interfaces/PackageInterface2.md",
  "index.md",
  "package-1b/index.md",
  "package-1b/interfaces/PackageInterface.md",
  "package-2/index.md",
  "package-2/module-1/index.md",
  "package-2/module-1/interfaces/PackageInterface1.md",
  "package-2/module-2/index.md",
  "package-2/module-2/interfaces/PackageInterface2.md",
  "package-2/modules.md",
  "package-4/index.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module1/interfaces/PackageInterface1.md",
  "package-5/module2/index.md",
  "package-5/module2/interfaces/PackageInterface2.md",
  "package-5/package-5.md",
  "package-6/module1/interfaces/PackageInterface1.md",
  "package-6/module2/index.md",
  "package-6/module2/interfaces/PackageInterface2.md",
  "package-6.md",
  "package-7/index.md",
  "package-7/module-1/classes/ClassA.md",
  "package-7/module-1/classes/ClassB.md",
  "package-7/module-1/index.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassA.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassB.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/index.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassA.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassB.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/index.md",
  "package-7/module-2/classes/ClassA.md",
  "package-7/module-2/classes/ClassB.md",
  "package-7/module-2/index.md",
  "packages.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: members 2`] = `
[
  "README.md",
  "package-1/README.md",
  "package-1/interfaces/PackageInterface.md",
  "package-1b/README.md",
  "package-1b/interfaces/PackageInterface.md",
  "package-2/README.md",
  "package-2/module-1/README.md",
  "package-2/module-1/interfaces/PackageInterface1.md",
  "package-2/module-2/README.md",
  "package-2/module-2/interfaces/PackageInterface2.md",
  "package-3/README.md",
  "package-3/documents/Package-Document-1.md",
  "package-3/index/README.md",
  "package-3/index/interfaces/PackageInterfaceForIndexModule.md",
  "package-3/module-1/README.md",
  "package-3/module-1/interfaces/PackageInterface1.md",
  "package-3/module-2/README.md",
  "package-3/module-2/interfaces/PackageInterface2.md",
  "package-4/README.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module1/interfaces/PackageInterface1.md",
  "package-5/module2/README.md",
  "package-5/module2/interfaces/PackageInterface2.md",
  "package-5/package-5.md",
  "package-6/module1/interfaces/PackageInterface1.md",
  "package-6/module2/README.md",
  "package-6/module2/interfaces/PackageInterface2.md",
  "package-6.md",
  "package-7/README.md",
  "package-7/module-1/README.md",
  "package-7/module-1/classes/ClassA.md",
  "package-7/module-1/classes/ClassB.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/README.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassA.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1/classes/ClassB.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/README.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassA.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2/classes/ClassB.md",
  "package-7/module-2/README.md",
  "package-7/module-2/classes/ClassA.md",
  "package-7/module-2/classes/ClassB.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: modules 1`] = `
[
  "@scope/package-1/globals.md",
  "@scope/package-1/index.md",
  "@scope/package-3/documents/Package-Document-1.md",
  "@scope/package-3/index.md",
  "@scope/package-3/interfaces/PackageInterface1.md",
  "@scope/package-3/interfaces/PackageInterface2.md",
  "@scope/package-3/interfaces/PackageInterfaceForIndexModule.md",
  "@scope/package-3/module-1.md",
  "@scope/package-3/module-2.md",
  "@scope/package-3/module_index.md",
  "index.md",
  "package-1b/index.md",
  "package-2/index.md",
  "package-2/module-1.md",
  "package-2/module-2.md",
  "package-2/modules.md",
  "package-4/index.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module2.md",
  "package-5/package-5.md",
  "package-6/module2.md",
  "package-6.md",
  "package-7/index.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2.md",
  "package-7/module-1.md",
  "package-7/module-2.md",
  "packages.md",
]
`;

exports[`Urls should gets Urls for packages entry points: outputFileStrategy: modules 2`] = `
[
  "README.md",
  "package-1/README.md",
  "package-1b/README.md",
  "package-2/README.md",
  "package-2/module-1.md",
  "package-2/module-2.md",
  "package-3/README.md",
  "package-3/documents/Package-Document-1.md",
  "package-3/index.md",
  "package-3/interfaces/PackageInterface1.md",
  "package-3/interfaces/PackageInterface2.md",
  "package-3/interfaces/PackageInterfaceForIndexModule.md",
  "package-3/module-1.md",
  "package-3/module-2.md",
  "package-4/README.md",
  "package-4/interfaces/PackageInterface.md",
  "package-5/module2.md",
  "package-5/package-5.md",
  "package-6/module2.md",
  "package-6.md",
  "package-7/README.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-1.md",
  "package-7/module-1/submodules/submodule-3-with-modules/nested-submodule-2.md",
  "package-7/module-1.md",
  "package-7/module-2.md",
]
`;

exports[`Urls should gets Urls for readme options: outputFileStrategy: members 1`] = `
[
  "functions/someFunction.md",
  "index.md",
]
`;

exports[`Urls should gets Urls for readme options: outputFileStrategy: modules 1`] = `
[
  "index.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: members 1`] = `
[
  "README.md",
  "classes/AbstractClass.md",
  "classes/BaseClass.md",
  "classes/BasicClass.md",
  "classes/CallbacksOptions.md",
  "classes/ChildClassA.md",
  "classes/ChildClassB.md",
  "classes/ClassWithAccessors.md",
  "classes/ClassWithComplexProps.md",
  "classes/ClassWithConstructorOverloads.md",
  "classes/ClassWithFlags.md",
  "classes/ClassWithModifiers.md",
  "classes/ClassWithSimpleProps.md",
  "classes/ClassWithSymbols.md",
  "classes/ClassWithTypeParameters.md",
  "classes/DerivedClassA.md",
  "classes/DerivedClassB.md",
  "classes/DisposableClass.md",
  "classes/GrandChildClassA.md",
  "classes/GrandChildClassB.md",
  "enumerations/BasicEnum.md",
  "enumerations/EnumWithValues.md",
  "functions/basicFunction.md",
  "functions/functionReturningAFunction.md",
  "functions/functionReturningAPromise.md",
  "functions/functionReturningAString.md",
  "functions/functionReturningAUnionType.md",
  "functions/functionReturningAnObject.md",
  "functions/functionWithComplexParams.md",
  "functions/functionWithDefaultParameters.md",
  "functions/functionWithMultipleSignatures.md",
  "functions/functionWithNamedParams.md",
  "functions/functionWithNestedParameters.md",
  "functions/functionWithOptionalParameters.md",
  "functions/functionWithRestParams.md",
  "functions/functionWithTypeParameters.md",
  "globals.md",
  "interfaces/BasicInterface.md",
  "interfaces/CustomEventInterface.md",
  "interfaces/ExtendedInterface.md",
  "interfaces/IndexableInterface.md",
  "interfaces/InterfaceWithComments.md",
  "interfaces/InterfaceWithEventProperties.md",
  "interfaces/InterfaceWithFlags.md",
  "interfaces/InterfaceWithTypeParameters.md",
  "type-aliases/ArrayOfStuff.md",
  "type-aliases/ArrayType.md",
  "type-aliases/ConditionalType.md",
  "type-aliases/ExternalReferenceType.md",
  "type-aliases/FunctionType.md",
  "type-aliases/IndexAccessType.md",
  "type-aliases/IntersectionType.md",
  "type-aliases/LiteralType.md",
  "type-aliases/PartialMappedType.md",
  "type-aliases/PrimitiveType.md",
  "type-aliases/PromiseTypeWithObject.md",
  "type-aliases/PromiseTypeWithSymbol.md",
  "type-aliases/QueryType.md",
  "type-aliases/ReadonlyMappedType.md",
  "type-aliases/StringLiteralType.md",
  "type-aliases/TupleType.md",
  "type-aliases/TypeDeclarationWithSpecialCharacters.md",
  "type-aliases/TypeWithExternalSymbolLinkMapping.md",
  "type-aliases/TypeWithTypeParams.md",
  "type-aliases/UnionType.md",
  "type-aliases/UnionTypeWithTemplateStrings.md",
  "variables/objectLiteralVariable.md",
  "variables/objectWithSymbol.md",
  "variables/someQuery.md",
  "variables/stringVariable.md",
  "variables/templateVariableString.md",
  "variables/typeOperatorVariable.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: members 2`] = `
[
  "README.md",
  "classes/AbstractClass.md",
  "classes/BaseClass.md",
  "classes/BasicClass.md",
  "classes/CallbacksOptions.md",
  "classes/ChildClassA.md",
  "classes/ChildClassB.md",
  "classes/ClassWithAccessors.md",
  "classes/ClassWithComplexProps.md",
  "classes/ClassWithConstructorOverloads.md",
  "classes/ClassWithFlags.md",
  "classes/ClassWithModifiers.md",
  "classes/ClassWithSimpleProps.md",
  "classes/ClassWithSymbols.md",
  "classes/ClassWithTypeParameters.md",
  "classes/DerivedClassA.md",
  "classes/DerivedClassB.md",
  "classes/DisposableClass.md",
  "classes/GrandChildClassA.md",
  "classes/GrandChildClassB.md",
  "enumerations/BasicEnum.md",
  "enumerations/EnumWithValues.md",
  "functions/basicFunction.md",
  "functions/functionReturningAFunction.md",
  "functions/functionReturningAPromise.md",
  "functions/functionReturningAString.md",
  "functions/functionReturningAUnionType.md",
  "functions/functionReturningAnObject.md",
  "functions/functionWithComplexParams.md",
  "functions/functionWithDefaultParameters.md",
  "functions/functionWithMultipleSignatures.md",
  "functions/functionWithNamedParams.md",
  "functions/functionWithNestedParameters.md",
  "functions/functionWithOptionalParameters.md",
  "functions/functionWithRestParams.md",
  "functions/functionWithTypeParameters.md",
  "interfaces/BasicInterface.md",
  "interfaces/CustomEventInterface.md",
  "interfaces/ExtendedInterface.md",
  "interfaces/IndexableInterface.md",
  "interfaces/InterfaceWithComments.md",
  "interfaces/InterfaceWithEventProperties.md",
  "interfaces/InterfaceWithFlags.md",
  "interfaces/InterfaceWithTypeParameters.md",
  "type-aliases/ArrayOfStuff.md",
  "type-aliases/ArrayType.md",
  "type-aliases/ConditionalType.md",
  "type-aliases/ExternalReferenceType.md",
  "type-aliases/FunctionType.md",
  "type-aliases/IndexAccessType.md",
  "type-aliases/IntersectionType.md",
  "type-aliases/LiteralType.md",
  "type-aliases/PartialMappedType.md",
  "type-aliases/PrimitiveType.md",
  "type-aliases/PromiseTypeWithObject.md",
  "type-aliases/PromiseTypeWithSymbol.md",
  "type-aliases/QueryType.md",
  "type-aliases/ReadonlyMappedType.md",
  "type-aliases/StringLiteralType.md",
  "type-aliases/TupleType.md",
  "type-aliases/TypeDeclarationWithSpecialCharacters.md",
  "type-aliases/TypeWithExternalSymbolLinkMapping.md",
  "type-aliases/TypeWithTypeParams.md",
  "type-aliases/UnionType.md",
  "type-aliases/UnionTypeWithTemplateStrings.md",
  "variables/objectLiteralVariable.md",
  "variables/objectWithSymbol.md",
  "variables/someQuery.md",
  "variables/stringVariable.md",
  "variables/templateVariableString.md",
  "variables/typeOperatorVariable.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "globals.md",
]
`;

exports[`Urls should gets Urls for single entry points: outputFileStrategy: modules 2`] = `
[
  "README.md",
]
`;

exports[`Urls should gets Urls for single package entry points: outputFileStrategy: members 1`] = `
[
  "README.md",
  "interfaces/PackageInterface.md",
  "packages.md",
]
`;

exports[`Urls should gets Urls for single package entry points: outputFileStrategy: modules 1`] = `
[
  "README.md",
  "packages.md",
]
`;
